# marching-cubes

./: .gitignore  CMakeLists.txt  CMakePresets.json  build.sh  clean.sh  run.sh
include/: marching-cubes.h
include/allocators/: chunk_allocator.hpp  slab_allocator.hpp
include/camera/: camera.hpp  camera_first_person.hpp  camera_third_person.hpp  frustum.hpp
include/collisions/: collisions.hpp
include/controllers/: camera_controller.hpp  input_controller.hpp
include/core/: aliases.hpp  buffer.hpp  device.hpp  device_memory.hpp  frame.hpp  framebuffer.hpp  image.hpp  image_view.hpp  job_manager.hpp  jobs.hpp  physical_device.hpp  pipeline.hpp  swapchain.hpp  wrapper.hpp
include/core/builders/: compute_pipeline_builder.hpp  graphics_pipeline_builder.hpp  render_pass_builder.hpp
include/core/builders/detail/: shader_builder.hpp
include/core/detail/: default_deleters.hpp
include/core/helpers/: buffer.hpp  command_buffer.hpp  command_pool.hpp  descriptor.hpp  device_memory.hpp  fence.hpp  framebuffer.hpp  image.hpp  image_view.hpp  pipeline.hpp  pipeline_cache.hpp  sampler.hpp  semaphore.hpp  shader_module.hpp  swapchain.hpp
include/managers/: chunk_manager.hpp
include/profiling/: chunk_manager.hpp
include/resources/: image_resource.hpp  object_buffer.hpp  staging_buffer.hpp
include/scene/: chunk.hpp  chunk_cache.hpp  interfaces.hpp  mesh.hpp  transform.hpp  ubo.hpp  vertex.hpp
include/tests/managers/: chunk_manager_tests.hpp
include/tests/utils/: thread_pool_tests.hpp
include/utils/: bit_enum.hpp  bit_utils.hpp  debug_print.hpp  enum_utils.hpp  frame_stats.hpp  glsl_alignment.hpp  lru_cache.hpp  marching_cubes.hpp  morton.hpp  render_conventions.hpp  samplers.hpp  thread_pool.hpp  tmp.hpp  type_safety.hpp  utils.hpp
include/window/: window.hpp
shaders/: line_shader.vert  shader.vert
src/: main.cpp  marching-cubes.cpp  test_marching_cubes.cpp
src/camera/: camera.cpp  camera_first_person.cpp  camera_third_person.cpp
src/core/: buffer.cpp  device.cpp  device_memory.cpp  frame.cpp  image.cpp  image_view.cpp  job_manager.cpp  physical_device.cpp  pipeline.cpp  swapchain.cpp
src/core/builders/: render_pass_builder.cpp
src/core/helpers/: buffers.cpp  command_buffer.cpp  command_pool.cpp  descriptor.cpp  device_memory.cpp  fence.cpp  framebuffer.cpp  image.cpp  image_view.cpp  pipeline.cpp  pipeline_cache.cpp  sampler.cpp  semaphore.cpp  shader_module.cpp  swapchain.cpp
src/profiling/: chunk_manager.cpp
src/resources/: image_resource.cpp
src/scene/: mesh.cpp  transform.cpp
src/tests/managers/: chunk_manager_tests.cpp
src/tests/utils/: thread_pool_tests.cpp
src/utils/: alignment.cpp  utils.cpp
src/window/: input_controller.cpp  window.cpp
